<resources>
    <string name="app_name">ChemicalQuery</string>
    <string name="home_title">BASF化学品查询</string>
    <string name="language">语言</string>
    <string name="simple_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="setting">设置</string>
    <string name="version">版本</string>
    <string name="importing">导入</string>
    <string name="scan_one_scan">扫一扫</string>
    <string name="release_date">发布日期</string>
    <string name="cancel">取消</string>
    <string name="setting_language">设置语言</string>
    <string name="request_camera_permission_tips">扫描二维码需要打开相机权限</string>
    <string name="request_write_external">导入文件需要文件夹读写权限</string>
    <string name="import_file_success">导入文件成功</string>
    <string name="cas_number">CAS编码</string>
    <string name="error_format">格式不正确,解析失败</string>
    <string name="not_search_data">没有找到数据</string>
    <string name="inventory">容量(kg)</string>
    <string name="chemical_name">化学品名</string>
    <string name="getting_data">正在获取数据</string>
    <string name="search_data">正在查找数据</string>
    <string name="technical_support_by_rbl">若比邻软件提供技术支持</string>
    <string name="chemical_detail">药品详情</string>
    <string name="code">编码</string>
    <string name="dangerous_chemical">危险化学品</string>
    <string name="cmr">CMR</string>
    <string name="h_phrase">H短语</string>
    <string name="msds">MSDS</string>
    <string name="copying">正在复制</string>
    <string name="unziping">正在解压</string>
    <string name="unzip_success">解压成功</string>
    <string name="analysis_data">正在解析数据</string>
    <string name="search">搜索</string>
    <string name="no_data_and_import_from_setting">没有找到数据，请从右上角设置中导入数据</string>
    <string name="please_selected_zip_file">请选择zip文件</string>
    <string name="close_flashlight">关闭闪光灯</string>
    <string name="open_flashlight">打开闪光灯</string>

</resources>
