<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    tools:context=".activity.MainActivity">


    <RelativeLayout
        android:id="@+id/home_top_rl"
        android:background="@color/bgWhite"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:text="首页"
            android:text="@string/home_title"
            android:textSize="@dimen/font_size_main_title_big"
            android:textColor="@color/fontBlack"
            />
        <ImageView
            android:id="@+id/setting_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/setting_icon"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            />
        <ImageView
            android:id="@+id/scan_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/scan_icon"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/setting_image"
            android:layout_marginRight="15dp"
            android:layout_toStartOf="@id/setting_image"
            android:layout_marginEnd="15dp" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/search_llt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/home_top_rl"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_layout_bg"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="6dp"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/gray_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:gravity="center"
            android:textSize="28sp"
            android:text="@string/search" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/chemical_list_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_llt" />

    <TextView
        android:id="@+id/no_data_tv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/not_search_data"
        android:layout_margin="10dp"
        android:gravity="center"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/font_size_main_title_big"/>


</android.support.constraint.ConstraintLayout>